Closed
Bug 643552
Opened 15 years ago
Closed 15 years ago
TI: Assertion failure: (strBits >> JSVAL_TAG_SHIFT) == 0, at ../jsval.h:625
Categories
(Core :: JavaScript Engine, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: decoder, Unassigned)
References
Details
(Keywords: assertion, testcase)
The following testcase (run with -m -n -a) asserts on TI tip (tested on 64 bit):
var x = Proxy.create( {get:function(r,name){Proxy = 0;}} );
x.watch('e', function(){});
Comment 1•15 years ago
|
||
ic::CallProp still used pic->atom in one place after possibly triggering a recompilation.
http://hg.mozilla.org/projects/jaegermonkey/rev/0e7d59dc92b6
Status: NEW → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
| Reporter | ||
Comment 2•13 years ago
|
||
A testcase for this bug was automatically identified at js/src/jit-test/tests/jaeger/recompile/bug643552.js.
Flags: in-testsuite+
You need to log in
before you can comment on or make changes to this bug.
Description
•