[INFER] Don't use pic->atom after possibly triggering recompilation in CallProp, bug 643552.