js/src/methodjit/PolyIC.cpp
@@ -1896,6 +1896,8 @@ ic::CallProp(VMFrame &f, ic::PICInfo *pic)
         objv.setObject(*pobj);
     }
 
+    jsid id = ATOM_TO_JSID(pic->atom);
+
     JSObject *aobj = js_GetProtoIfDenseArray(&objv.toObject());
     Value rval;
 
@@ -1923,9 +1925,6 @@ ic::CallProp(VMFrame &f, ic::PICInfo *pic)
          * Cache miss: use the immediate atom that was loaded for us under
          * PropertyCache::test.
          */
-        jsid id;
-        id = ATOM_TO_JSID(pic->atom);
-
         regs.sp++;
         regs.sp[-1].setNull();
         if (lval.isObject()) {
@@ -1952,7 +1951,7 @@ ic::CallProp(VMFrame &f, ic::PICInfo *pic)
 
 #if JS_HAS_NO_SUCH_METHOD
     if (JS_UNLIKELY(rval.isUndefined()) && regs.sp[-1].isObject()) {
-        regs.sp[-2].setString(ATOM_TO_STRING(pic->atom));
+        regs.sp[-2].setString(JSID_TO_STRING(id));
         if (!js_OnUnknownMethod(cx, regs.sp - 2))
             THROW();
     }
