js/src/jit-test/tests/jaeger/recompile/bug643552.js
@@ -1,0 +1,2 @@
+var x = Proxy.create( {get:function(r,name){Proxy = 0;}} );
+try { x.watch('e', function(){}); } catch (e) {}
